--- a/needle_placement/CMakeLists.txt
+++ b/needle_placement/CMakeLists.txt
@@ -164,6 +164,8 @@ catkin_install_python(PROGRAMS
   scripts/forward_kinematics.py
   scripts/inverse_kinematics.py
   scripts/inverse_.py
+  scripts/camera_calibration.py
+  scripts/image_creator.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
