--- a/needle_placement/config/JTC.yaml
+++ b/needle_placement/config/JTC.yaml
@@ -1,24 +1,28 @@
-panda_controller:
-  type: "position_controllers/JointTrajectoryController"
-  joints:
-    - panda_joint1
-    - panda_joint2
-    - panda_joint3
-    - panda_joint4
-    - panda_joint5
-    - panda_joint6
-    - panda_joint7
-  constraints:
-          goal_time: 0.6
-          stopped_velocity_tolerance: 0.05
-          joint1: {trajectory: 0.1, goal: 0.1}
-          joint2: {trajectory: 0.1, goal: 0.1}
-          joint3: {trajectory: 0.1, goal: 0.1}
-          joint4: {trajectory: 0.1, goal: 0.1}
-          joint5: {trajectory: 0.1, goal: 0.1}
-          joint6: {trajectory: 0.1, goal: 0.1}
-          joint7: {trajectory: 0.1, goal: 0.1}
-  stop_trajectory_duration: 0.5
-  state_publish_rate:  25
-  action_monitor_rate: 10
-  
+joint_state_controller:
+    type: joint_state_controller/JointStateController
+    publish_rate: 50
+
+position_joint_trajectory_controller:
+    type: position_controllers/JointTrajectoryController
+    joints:
+        - panda_joint1
+        - panda_joint2
+        - panda_joint3
+        - panda_joint4
+        - panda_joint5
+        - panda_joint6
+        - panda_joint7
+
+    gains:
+        panda_joint1: { p: 12000, d: 50, i: 0.0, i_clamp: 10000 }
+        panda_joint2: { p: 30000, d: 100, i: 0.02, i_clamp: 10000 }
+        panda_joint3: { p: 18000, d: 50, i: 0.01, i_clamp: 1 }
+        panda_joint4: { p: 18000, d: 70, i: 0.01, i_clamp: 10000 }
+        panda_joint5: { p: 12000, d: 70, i: 0.01, i_clamp: 1 }
+        panda_joint6: { p: 7000, d: 50, i: 0.01, i_clamp: 1 }
+        panda_joint7: { p: 2000, d: 20, i: 0.0, i_clamp: 1 }
+
+    constraints:
+        goal_time: 2.0
+
+    state_publish_rate: 25
