client_server_node. Not finished

--- a/needle_placement/CMakeLists.txt
+++ b/needle_placement/CMakeLists.txt
@@ -165,6 +165,7 @@ catkin_install_python(PROGRAMS
   scripts/inverse_kinematics.py
   scripts/panda_trajectory_node.py
   scripts/panda_trajectory_advanced_node.py
+  scripts/panda_trajectory_advanced_node_UI.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
