add point cloud recorder

--- a/src/needle_placement/CMakeLists.txt
+++ b/src/needle_placement/CMakeLists.txt
@@ -164,6 +164,7 @@ catkin_install_python(PROGRAMS
   scripts/forward_kinematics.py
   scripts/inverse_kinematics.py
   scripts/calibration/rosbag_record.py
+  scripts/model_registration.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
