--- a/needle_placement/CMakeLists.txt
+++ b/needle_placement/CMakeLists.txt
@@ -163,6 +163,7 @@ include_directories(
 catkin_install_python(PROGRAMS
   scripts/forward_kinematics.py
   scripts/inverse_kinematics.py
+  scripts/quitic_trajectory_publisher.py
   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
 )
 
